added 3 LogAspect and some refactored  - added (Controller, Service, _)LogAspect  - added log4j.properties