@@ -1,9 +1,9 @@
 package org.gnori.booksmarket.api.factory;
 
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.gnori.booksmarket.aop.LogExecutionTime;
 import org.gnori.booksmarket.api.dto.AuthorDto;
 import org.gnori.booksmarket.api.dto.BookDto;
 import org.gnori.booksmarket.storage.entity.AuthorEntity;
@@ -16,11 +16,13 @@ import org.springframework.stereotype.Component;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class AuthorDtoFactory {
 
+  @LogExecutionTime
   public Page<AuthorDto> createPageOfAuthorDtoFrom(Page<AuthorEntity> pageOfEntities) {
 
-    return new PageImpl<AuthorDto>(pageOfEntities.map(this::createAuthorDtoFrom).toList());
+    return new PageImpl<>(pageOfEntities.map(this::createAuthorDtoFrom).toList());
   }
 
+  @LogExecutionTime
   public AuthorDto createAuthorDtoFrom(AuthorEntity author) {
 
     return AuthorDto.builder()
@@ -32,7 +34,7 @@ public class AuthorDtoFactory {
                 .id(books.getId())
                 .name(books.getName())
                 .build()
-        ).collect(Collectors.toList()))
+        ).toList())
         .build();
   }
 }
